syntax = "proto3";
option csharp_namespace = "GrpcChat.Database.Users";

service UserService 
{
  rpc GetUserByRefId(GetUserByRefIdRequest) returns (UserDto);
  rpc GetUserByUsername(GetUserByUsernameRequest) returns (UserDto);
  rpc CreateUser(CreateUserRequest) returns (UserDto);
  rpc UpdateUser(UpdateUserRequest) returns (UserDto);
  rpc DeleteUser(DeleteUserRequest) returns (UserDto);
}

message GetUserByRefIdRequest 
{
  string userReferenceId = 1;
}

message GetUserByUsernameRequest 
{
  string username = 1;
}

message CreateUserRequest 
{
  string username = 1;
  string email = 2;
  string passwordHash = 3;
  string name = 4;
}

message UpdateUserRequest
{
  string referenceId = 1;
  string username = 2;
  string email = 3;
  string passwordHash = 4;
  string name = 5;
}

message DeleteUserRequest
{
  string referenceId = 1;
}

message UserDto 
{
  string id = 1;
  string username = 2;
  string email = 3;
  bool isActive = 4;
  string name = 5;
}
